--- a/09 - Dev Tools Domination/index.html
+++ b/09 - Dev Tools Domination/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>Console Tricks!</title>
-  <link rel="icon" href="https://fav.farm/🔥" />
+  <link rel="icon" href="https://fav.farm/🎯" />
 </head>
 <body>
 
-  <p onClick="makeGreen()">×BREAK×DOWN×</p>
+  <p onClick="makeGreen()">xBREAKxDOWNx</p>
 
   <script>
     const dogs = [{ name: 'Snickers', age: 2 }, { name: 'hugo', age: 8 }];
@@ -18,29 +18,76 @@
       p.style.fontSize = '50px';
     }
 
+    // open console
     // Regular
+    console.log('hello');
 
     // Interpolated
+    console.log('Hello I am a %s string!', '🎯')
 
     // Styled
+    console.log('%c I am some great text', 'font-size:50px; background:yellow; text-shadow: 10px 10px 0 blue')
 
     // warning!
+    console.warn('THIS IS A WARNING.');
 
     // Error :|
+    console.error('An error has occured');
 
     // Info
+    console.info('JavaScript was created in just 10 days in 1995 by Brendan Eich!');
 
     // Testing
+    // to check if things are true
+    const p = document.querySelector('p');
+    console.assert(p.classList.contains('ouch'), 'This is wrong');
 
     // clearing
+    //to auto clear the whole console
+    console.clear();
 
     // Viewing DOM Elements
+    //open class list
+    console.log(p);
+    console.dir(p);
+
+    console.clear();
 
     // Grouping together
+    dogs.forEach(dog => {
+      console.group(`${dog.name}`);
+      console.log(`This is ${dog.name}`);
+      console.log(`${dog.name} is ${dog.age} years old`);
+      console.log(`${dog.name} is ${dog.age *7} dog years old`);
+      console.groupEnd(`${dog.name}`);
+    });
 
     // counting
+    // use to count how many word you used a specific word
+    console.count('Wes');
+    console.count('Wes');
+    console.count('Steve');
+    console.count('Steve');
+    console.count('Wes');
+    console.count('Steve');
+    console.count('Wes');
+    console.count('Steve');
+    console.count('Steve');
+    console.count('Steve');
+    console.count('Steve');
+    console.count('Steve');
 
     // timing
+    // start a timer
+    console.time('fetching data');
+    fetch('https://api.github.com/users/shahierah')
+    .then(data => data.json())
+    .then(data => {
+      console.timeEnd('fetching data')
+      console.log(data);
+    });
+
+    console.table(dogs);
 
   </script>
 </body>
