--- a/10 - Hold Shift and Check Checkboxes/index.html
+++ b/10 - Hold Shift and Check Checkboxes/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Hold Shift to Check Multiple Checkboxes</title>
-  <link rel="icon" href="https://fav.farm/🔥" />
+  <link rel="icon" href="https://fav.farm/📝" />
 </head>
 <body>
   <style>
@@ -97,6 +97,36 @@
   </div>
 
 <script>
+const checkboxes = document.querySelectorAll('.inbox input[type="checkbox"]');
+
+//reassigned constantly
+let lastChecked;
+
+function handleCheck(e){
+  //check if they had the shift key down
+  //check that they are checking it
+  let inBetween = false;
+if (e.shiftKey && this.checked){
+  //go ahead and do what we please
+  //loop over every single checkbox
+  checkboxes.forEach(checkbox => {
+    console.log(checkbox);
+    if(checkbox === this || checkbox === lastChecked){
+      inBetween = !inBetween;
+      console.log('Starting to check them inbetween!');
+    }
+
+    if (inBetween){
+      checkbox.checked = true;
+    }
+   });
+  }
+
+ lastChecked = this;
+}
+
+//click sound
+checkboxes.forEach(checkbox => checkbox.addEventListener('click', handleCheck));
 </script>
 </body>
 </html>
