--- a/11 - Custom Video Player/index.html
+++ b/11 - Custom Video Player/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>HTML Video Player</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" href="https://fav.farm/🔥" />
+  <link rel="icon" href="https://fav.farm/🎥" />
 </head>
 <body>
 
@@ -18,8 +18,8 @@
        <button class="player__button toggle" title="Toggle Play">►</button>
        <input type="range" name="volume" class="player__slider" min="0" max="1" step="0.05" value="1">
        <input type="range" name="playbackRate" class="player__slider" min="0.5" max="2" step="0.1" value="1">
-       <button data-skip="-10" class="player__button">« 10s</button>
-       <button data-skip="25" class="player__button">25s »</button>
+       <button data-skip="-5" class="player__button">« 5s</button>
+       <button data-skip="10" class="player__button">10s »</button>
      </div>
    </div>
 
