--- a/19 - Webcam Fun/index.html
+++ b/19 - Webcam Fun/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Get User Media Code Along!</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" href="https://fav.farm/🔥" />
+  <link rel="icon" href="https://fav.farm/📹" />
 </head>
 <body>
 
