--- a/24 - Sticky Nav/index.html
+++ b/24 - Sticky Nav/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Sticky Nav</title>
   <link rel="stylesheet" href="style-START.css">
-  <link rel="icon" href="https://fav.farm/🔥" />
+  <link rel="icon" href="https://fav.farm/🌠" />
 </head>
 <body>
 
@@ -55,7 +55,20 @@
   </div>
 
 <script>
+  const nav = document.querySelector('#main');
+  let topOfNav = nav.offsetTop;
 
+  function fixNav() {
+    if(window.scrollY >= topOfNav) {
+      document.body.style.paddingTop = nav.offsetHeight + 'px';
+      document.body.classList.add('fixed-nav');
+    } else {
+      document.body.classList.remove('fixed-nav');
+      document.body.style.paddingTop = 0;
+    }
+  }
+
+  window.addEventListener('scroll', fixNav);
 </script>
 
 </body>
